Changelog
=========


1.12.1 (unreleased)
-------------------

- Nothing changed yet.


1.12.0 (2016-11-24)
-------------------

- Record ftw.activity event when file downloaded. [jone]

- Eliminate bad security declarations through interface. [jone]

- Simplify schema inheritance. [jone]

- Fix security declarations for getOriginFilename, is_image and getField. [jone]


1.11.5 (2016-07-19)
-------------------

- documentDate is now required.
  https://github.com/4teamwork/ftw.file/issues/64
  [elioschmutz]

- Set batch size to 10. 50 is imho way to mutch, event 20 makes me scrolling 3 down.
  So 10 is imho OK. No? let's fight... or someone implements a configurable number.
  [mathias.leimgruber]

- Added pagination for journal.
  [lknoepfel]

- Allow SiteAdministrator to add files.
  [tschanzt]


1.11.4 (2016-01-27)
-------------------

- The origin filename must not contain "/". Otherwise a 404 will occur
  when the user tries to download the file.
  [mbaechtold]

- Reload page if drag&drop upload has failed.
  [elioschmutz]


1.11.3 (2016-01-05)
-------------------

- Fix journal action translation for files
  [elioschmutz]

- Fix drag'n'drop for files in Firefox.
  [Kevin Bieri]

- Fix regression when trying to link files in TinyMCE.
  The problem was that only images were linkable.
  [jone]

- Fix tests for new colorbox version.
  [tschanzt]


1.11.2 (2015-09-10)
-------------------

- Details view: refactor template binding for easeier subclassing.
  By moving the template binding to python code, subclasses can still render
  the default template conditionally.
  [jone]


1.11.1 (2015-09-09)
-------------------

- Fix jsondetails function, so it doesn't crash when not finding scales.
  [tschanzt]


1.11.0 (2015-09-08)
-------------------

- Remove icon effect when replacing file.
  [jone]

- Add adjustments to integrate bumblebee
    - Trigger event dndUploadViewUpdated if drag&drop is finished