@@ -11,5 +11,9 @@
       <role name="Site Administrator" />
       <role name="Reviewer" />
     </permission>
+    <permission name="ftw.file: Protect file" acquire="True">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
   </permissions>
 </rolemap>
