@@ -5,7 +5,8 @@ Changelog
 1.12.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- A new option on the file can be used to protect a file. Protected files
+  cannot be deleted by anyone until the option is unchecked. [mbaechtold]
 
 
 1.12.0 (2016-11-24)
